--- a/css/style.css
+++ b/css/style.css
@@ -51,6 +51,13 @@ h1,h2 {
     border-bottom: 1px solid #3a3a3a;
 }
 
+/* hero image*/
+
+#hero-image {
+    height: 100%;
+    width: 600px;
+    url ('../images/hero-image.webp') no-repeat center center;
+}
 .active {
     border-bottom: 1px solid #3a3a3a;
 }
